--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'Duprè, Giovanni, 1817-1882'
 - !lcsh 'Artists -- Italy -- Biography'
 - !lcc 'NB'
+- GITenberg
 title: Thoughts on Art and Autobiographical Memoirs of Giovanni Duprè
 url: http://www.gutenberg.org/ebooks/40870
